Fixed link styling & width of disclaimer on mobile

--- a/_sass/layout/_asset_management_tools.scss
+++ b/_sass/layout/_asset_management_tools.scss
@@ -89,6 +89,11 @@
     }
 }
 
+.product-page #main .asset_tool_card p a{
+    font: inherit;
+    font-family: 'Open Sans';
+}
+
 .read_next {
     margin-top: 84px;
     &:before {
