--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -192,7 +192,7 @@
 	}
 
 	.disclaimer {
-		width: 540px;
+		max-width: 540px;
 
 		font-family: Open Sans;
 		font-style: normal;
